# meshstack

./: Cargo.toml  LICENSE  README.md  TODO.md  dev-values.yaml  meshstack.yaml  prod-values.yaml  release.toml
.github/workflows/: release.yml
docs/: bootstrap_command_specs.md  commands.md  deploy_command_specs.md  destroy_command_specs.md  generate_command_specs.md  install_command_specs.md  plan_command_specs.md  status_command_specs.md  update_command_specs.md  validate_command_specs.md
services/demo-service/: Chart.yaml  Dockerfile  values.yaml
services/demo-service/templates/: deployment.yaml  service.yaml
src/: main.rs
templates/go/: go_template_file.txt
templates/node/: node_template_file.txt
templates/python/: python_template_file.txt
templates/rust/: rust_template_file.txt
tests/: cli.rs  utils.rs
